# panicdump

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: panicdumpConfig.cmake.in
docs/: FORMAT.md  INTEGRATION.md  LIMITATIONS.md  PORTING.md
examples/generic_cortexm_demo/: generic_cortexm_demo.c
examples/stm32f4_demo/: Makefile  main.c  startup_stm32f4.S  stm32f407vg.ld  stm32f4_uart.c  stm32f4_uart.h
include/: panicdump.h  panicdump_crc32.h  panicdump_port.h
ports/cortexm/: panicdump_fault_entry.S
src/: panicdump.c  panicdump_port_cortexm.c  panicdump_port_host.c  panicdump_util.h  panicdump_wire.h
tests/: panicdump_core_test.c
tests/host_format_tests/: test_decoder_cli.py  test_format.py
tests/package_consumer/: CMakeLists.txt  main.c
tools/: decode_panicdump.py  make_mock_dump.py
tools/test_vectors/: bad_crc.txt  partial.txt  valid_hardfault.txt  valid_memmanage.txt  valid_sw_trigger.txt  valid_usagefault.txt
